--- a/Projects/Neuron.ipynb
+++ b/Projects/Neuron.ipynb
@@ -1,1 +1,128 @@
-{"cells":[{"cell_type":"code","execution_count":1,"metadata":{},"outputs":[],"source":["import numpy as np\n","np.random.seed(1)"]},{"cell_type":"code","execution_count":7,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":["[[  0.38921331   0.77008662 -14.56189054]]\n","Vetor de errors (e) = [-1.64097513e-10  0.00000000e+00  0.00000000e+00  0.00000000e+00\n","  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n"]},{"name":"stderr","output_type":"stream","text":["C:\\Users\\juand\\AppData\\Local\\Temp\\ipykernel_132168\\3572725958.py:17: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n","  e[k] = y[k]-yr\n"]}],"source":["x = np.array([113,122,107,98,115,120,118])\n","x2 = np.array([6.8,4.7,5.2,3.6,2.9,4.2,5.1])\n","\n","x = np.vstack((x,x2))  \n","y = np.array([-1,1,-1,-1,1,1,1])\n","\n","w = 2*np.random.random((1,3)) - 1\n","\n","e = np.zeros(7)\n","eta = 0.1\n","bias = 1\n","\n","for i in range(1000):\n","    for k in range(len(x)):\n","        xb = np.hstack((bias,x[:,k]))\n","        yr = np.tanh(np.dot(w,xb))\n","        e[k] = y[k]-yr\n","        w += eta*e[k]*xb\n","print(w)\n","print(\"Vetor de errors (e) = \" + str(e))\n","\n"]},{"cell_type":"code","execution_count":3,"metadata":{},"outputs":[],"source":["X = np.array([ [0,0,1],[0,1,1],[1,0,1],[1,1,1] ])\n","y = np.array([[0,1,1,0]]).T\n","syn0 = 2*np.random.random((3,4)) - 1\n","syn1 = 2*np.random.random((4,1)) - 1\n","for j in range(60000):\n","    l1 = 1/(1+np.exp(-(np.dot(X,syn0))))\n","    l2 = 1/(1+np.exp(-(np.dot(l1,syn1))))\n","    l2_delta = (y - l2)*(l2*(1-l2))\n","    l1_delta = l2_delta.dot(syn1.T) * (l1 * (1-l1))\n","    syn1 += l1.T.dot(l2_delta)\n","    syn0 += X.T.dot(l1_delta)"]},{"cell_type":"code","execution_count":4,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":["[0.03023714]\n"]}],"source":["l1 = 1/(1+np.exp(-(np.dot([0,0,0],syn0))))\n","l2 = 1/(1+np.exp(-(np.dot(l1,syn1))))\n","\n","print(l2)"]},{"cell_type":"code","execution_count":6,"metadata":{},"outputs":[{"name":"stdout","output_type":"stream","text":["[0. 0. 0. 0. 0. 0. 0.]\n"]}],"source":["x = np.array([113,122,107,98,115,120,118])\n","x2 = np.array([6.8,4.7,5.2,3.6,2.9,4.2,5.1])\n","\n","y = np.array([-1,1,-1,-1,1,1,1])\n","\n","x = np.vstack((x,x2))  \n","\n","e = np.zeros(7)\n","\n","syn0 = 2*np.random.random((3)) - 1\n","\n","for i in range(50):\n","    for j in range(len(x)):\n","        xb = np.hstack((1,x[:,j]))\n","        output = np.tanh(np.dot(xb,syn0))\n","        e[j] = y[j]-output\n","        syn0 += 0.1*e[j]*xb\n","print(e)"]}],"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.12.1"}},"nbformat":4,"nbformat_minor":2}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([113,122,107,98,115,120,118])\n",
+    "x2 = np.array([6.8,4.7,5.2,3.6,2.9,4.2,5.1])\n",
+    "\n",
+    "x = np.vstack((x,x2))  \n",
+    "y = np.array([-1,1,-1,-1,1,1,1])\n",
+    "\n",
+    "w = 2*np.random.random((1,3)) - 1\n",
+    "\n",
+    "e = np.zeros(7)\n",
+    "eta = 0.1\n",
+    "bias = 1\n",
+    "\n",
+    "for i in range(1000):\n",
+    "    for k in range(len(x)):\n",
+    "        xb = np.hstack((bias,x[:,k]))\n",
+    "        yr = np.tanh(np.dot(w,xb))\n",
+    "        e[k] = y[k]-yr\n",
+    "        w += eta*e[k]*xb\n",
+    "print(\"Vetor de errors (e) = \" + str(e))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([113,122,107,98,115,120,118])\n",
+    "x2 = np.array([6.8,4.7,5.2,3.6,2.9,4.2,5.1])\n",
+    "\n",
+    "y = np.array([-1,1,-1,-1,1,1,1])\n",
+    "\n",
+    "x = np.vstack((x,x2))  \n",
+    "\n",
+    "e = np.zeros(7)\n",
+    "\n",
+    "syn0 = 2*np.random.random((3)) - 1\n",
+    "\n",
+    "for i in range(50):\n",
+    "    for j in range(len(x)):\n",
+    "        xb = np.hstack((1,x[:,j]))\n",
+    "        output = np.tanh(np.dot(xb,syn0))\n",
+    "        e[j] = y[j]-output\n",
+    "        syn0 += 0.1*e[j]*xb\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.array([ [0,0,1],[0,1,1],[1,0,1],[1,1,1] ])\n",
+    "y = np.array([[0,1,1,0]]).T\n",
+    "syn0 = 2*np.random.random((3,4)) - 1\n",
+    "syn1 = 2*np.random.random((4,1)) - 1\n",
+    "for j in range(60000):\n",
+    "    l1 = 1/(1+np.exp(-(np.dot(X,syn0))))\n",
+    "    l2 = 1/(1+np.exp(-(np.dot(l1,syn1))))\n",
+    "    l2_delta = (y - l2)*(l2*(1-l2))\n",
+    "    l1_delta = l2_delta.dot(syn1.T) * (l1 * (1-l1))\n",
+    "    syn1 += l1.T.dot(l2_delta)\n",
+    "    syn0 += X.T.dot(l1_delta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1 = 1/(1+np.exp(-(np.dot([0,0,0],syn0))))\n",
+    "l2 = 1/(1+np.exp(-(np.dot(l1,syn1))))\n",
+    "\n",
+    "print(l2)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
