--- a/Projects/ASLClassifier/ASLClassifier.ipynb
+++ b/Projects/ASLClassifier/ASLClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +78,69 @@
     "    loss = losses.SparseCategoricalCrossentropy(),\n",
     "    metrics = [ metrics.SparseCategoricalAccuracy() ]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = utils.image_dataset_from_directory(\n",
+    "    'asl_alphabet_train',\n",
+    "    validation_split = 0.2,\n",
+    "    subset = 'training',\n",
+    "    seed = 123,\n",
+    "    shuffle = True,\n",
+    "    image_size = (512, 512),\n",
+    "    batch_size = batch_size\n",
+    ")\n",
+    "\n",
+    "test = utils.image_dataset_from_directory(\n",
+    "    'asl_alphabet_train',\n",
+    "    validation_split = 0.2,\n",
+    "    subset = 'validation',\n",
+    "    seed = 123,\n",
+    "    shuffle = True,\n",
+    "    image_size = (512, 512),\n",
+    "    batch_size = batch_size\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(train,\n",
+    "    epochs = epochs,\n",
+    "    validation_data = test,\n",
+    "    callbacks= [\n",
+    "        callbacks.EarlyStopping(\n",
+    "            monitor = 'val_loss',\n",
+    "            patience = patience,\n",
+    "            verbose = 1\n",
+    "        ),\n",
+    "        callbacks.ModelCheckpoint(\n",
+    "            filepath = model_path,\n",
+    "            save_weights_only = False,\n",
+    "            monitor = 'loss',\n",
+    "            mode = 'min',\n",
+    "            save_best_only = True\n",
+    "        )\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.load_model('./model/signmon.keras')\n",
+    "model.summary()"
    ]
   }
  ],
