--- a/Projects/ASLClassifier/ASLClassifier.ipynb
+++ b/Projects/ASLClassifier/ASLClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,12 @@
     "batch_size = 32\n",
     "patience = 5\n",
     "learning_rate = 0.001\n",
-    "model_path = './model/signmon.keras'"
+    "model_path = './model/softmax.keras'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,13 @@
     "    ),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
     "    \n",
-    "    layers.Conv2D(32, (5, 5),\n",
+    "    layers.Conv2D(64, (3, 3),\n",
+    "        activation = 'relu',\n",
+    "        kernel_initializer = initializers.RandomNormal()\n",
+    "    ),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "\n",
+    "    layers.Conv2D(128, (3, 3),\n",
     "        activation = 'relu',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
@@ -53,13 +59,13 @@
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    \n",
-    "    layers.Dense(32,\n",
+    "    layers.Dense(86,\n",
     "        activation = 'relu',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    \n",
     "    layers.Dense(29,\n",
-    "        activation = 'sigmoid',\n",
+    "        activation = 'softmax',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    )\n",
     "])"
@@ -67,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 223102 files belonging to 2 classes.\n",
-      "Using 178482 files for training.\n",
-      "Found 223102 files belonging to 2 classes.\n",
-      "Using 44620 files for validation.\n"
+      "Found 223074 files belonging to 29 classes.\n",
+      "Using 178460 files for training.\n",
+      "Found 223074 files belonging to 29 classes.\n",
+      "Using 44614 files for validation.\n"
      ]
     }
    ],
@@ -120,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -128,35 +134,33 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1632s\u001b[0m 292ms/step - loss: 0.0185 - sparse_categorical_accuracy: 0.9988 - val_loss: 0.0024 - val_sparse_categorical_accuracy: 0.9999\n",
+      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1521s\u001b[0m 272ms/step - loss: 1.3210 - sparse_categorical_accuracy: 0.6033 - val_loss: 0.1819 - val_sparse_categorical_accuracy: 0.9451\n",
       "Epoch 2/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m607s\u001b[0m 109ms/step - loss: 0.0023 - sparse_categorical_accuracy: 0.9999 - val_loss: 0.0020 - val_sparse_categorical_accuracy: 0.9999\n",
+      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m726s\u001b[0m 130ms/step - loss: 0.1517 - sparse_categorical_accuracy: 0.9535 - val_loss: 0.1005 - val_sparse_categorical_accuracy: 0.9712\n",
       "Epoch 3/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m604s\u001b[0m 108ms/step - loss: 0.0045 - sparse_categorical_accuracy: 0.9999 - val_loss: 0.0017 - val_sparse_categorical_accuracy: 0.9999\n",
+      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m726s\u001b[0m 130ms/step - loss: 0.0875 - sparse_categorical_accuracy: 0.9732 - val_loss: 0.0867 - val_sparse_categorical_accuracy: 0.9780\n",
       "Epoch 4/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m603s\u001b[0m 108ms/step - loss: 0.0030 - sparse_categorical_accuracy: 0.9999 - val_loss: 0.0014 - val_sparse_categorical_accuracy: 0.9999\n",
+      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m724s\u001b[0m 130ms/step - loss: 0.0631 - sparse_categorical_accuracy: 0.9811 - val_loss: 0.0597 - val_sparse_categorical_accuracy: 0.9852\n",
       "Epoch 5/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m602s\u001b[0m 108ms/step - loss: 0.0024 - sparse_categorical_accuracy: 0.9999 - val_loss: 0.0012 - val_sparse_categorical_accuracy: 0.9999\n",
+      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m726s\u001b[0m 130ms/step - loss: 0.0522 - sparse_categorical_accuracy: 0.9848 - val_loss: 0.0776 - val_sparse_categorical_accuracy: 0.9817\n",
       "Epoch 6/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m602s\u001b[0m 108ms/step - loss: 0.0029 - sparse_categorical_accuracy: 0.9999 - val_loss: 0.0015 - val_sparse_categorical_accuracy: 0.9999\n",
+      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m726s\u001b[0m 130ms/step - loss: 0.0429 - sparse_categorical_accuracy: 0.9879 - val_loss: 0.0739 - val_sparse_categorical_accuracy: 0.9849\n",
       "Epoch 7/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m602s\u001b[0m 108ms/step - loss: 0.0039 - sparse_categorical_accuracy: 0.9998 - val_loss: 0.0019 - val_sparse_categorical_accuracy: 0.9999\n",
+      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m727s\u001b[0m 130ms/step - loss: 0.0426 - sparse_categorical_accuracy: 0.9883 - val_loss: 0.0760 - val_sparse_categorical_accuracy: 0.9859\n",
       "Epoch 8/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m602s\u001b[0m 108ms/step - loss: 0.0028 - sparse_categorical_accuracy: 0.9998 - val_loss: 0.0016 - val_sparse_categorical_accuracy: 0.9999\n",
+      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m727s\u001b[0m 130ms/step - loss: 0.0400 - sparse_categorical_accuracy: 0.9892 - val_loss: 0.0700 - val_sparse_categorical_accuracy: 0.9863\n",
       "Epoch 9/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m603s\u001b[0m 108ms/step - loss: 0.0030 - sparse_categorical_accuracy: 0.9999 - val_loss: 0.0018 - val_sparse_categorical_accuracy: 0.9999\n",
-      "Epoch 10/100\n",
-      "\u001b[1m5578/5578\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m604s\u001b[0m 108ms/step - loss: 0.0056 - sparse_categorical_accuracy: 0.9999 - val_loss: 0.0036 - val_sparse_categorical_accuracy: 0.9999\n",
-      "Epoch 10: early stopping\n"
+      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m728s\u001b[0m 130ms/step - loss: 0.0384 - sparse_categorical_accuracy: 0.9902 - val_loss: 0.0718 - val_sparse_categorical_accuracy: 0.9851\n",
+      "Epoch 9: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x29fc656b530>"
+       "<keras.src.callbacks.history.History at 0x295ae86a930>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
