--- a/Projects/ASLClassifier/ASLClassifier.ipynb
+++ b/Projects/ASLClassifier/ASLClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,12 @@
     "batch_size = 32\n",
     "patience = 5\n",
     "learning_rate = 0.001\n",
-    "model_path = './model/softmax.keras'"
+    "model_path = './model/signmon.keras'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,13 +39,7 @@
     "    ),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
     "    \n",
-    "    layers.Conv2D(64, (3, 3),\n",
-    "        activation = 'relu',\n",
-    "        kernel_initializer = initializers.RandomNormal()\n",
-    "    ),\n",
-    "    layers.MaxPooling2D((2, 2)),\n",
-    "\n",
-    "    layers.Conv2D(128, (3, 3),\n",
+    "    layers.Conv2D(32, (5, 5),\n",
     "        activation = 'relu',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
@@ -59,7 +53,7 @@
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    \n",
-    "    layers.Dense(86,\n",
+    "    layers.Dense(32,\n",
     "        activation = 'relu',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
@@ -73,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +94,44 @@
       "Found 223074 files belonging to 29 classes.\n",
       "Using 44614 files for validation.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['A',\n",
+       " 'B',\n",
+       " 'C',\n",
+       " 'D',\n",
+       " 'E',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'H',\n",
+       " 'I',\n",
+       " 'J',\n",
+       " 'K',\n",
+       " 'L',\n",
+       " 'M',\n",
+       " 'N',\n",
+       " 'O',\n",
+       " 'P',\n",
+       " 'Q',\n",
+       " 'R',\n",
+       " 'S',\n",
+       " 'T',\n",
+       " 'U',\n",
+       " 'V',\n",
+       " 'W',\n",
+       " 'X',\n",
+       " 'Y',\n",
+       " 'Z',\n",
+       " 'del',\n",
+       " 'nothing',\n",
+       " 'space']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -121,50 +153,15 @@
     "    shuffle = True,\n",
     "    image_size = (512, 512),\n",
     "    batch_size = batch_size\n",
-    ")"
+    ")\n",
+    "train.class_names\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1521s\u001b[0m 272ms/step - loss: 1.3210 - sparse_categorical_accuracy: 0.6033 - val_loss: 0.1819 - val_sparse_categorical_accuracy: 0.9451\n",
-      "Epoch 2/100\n",
-      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m726s\u001b[0m 130ms/step - loss: 0.1517 - sparse_categorical_accuracy: 0.9535 - val_loss: 0.1005 - val_sparse_categorical_accuracy: 0.9712\n",
-      "Epoch 3/100\n",
-      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m726s\u001b[0m 130ms/step - loss: 0.0875 - sparse_categorical_accuracy: 0.9732 - val_loss: 0.0867 - val_sparse_categorical_accuracy: 0.9780\n",
-      "Epoch 4/100\n",
-      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m724s\u001b[0m 130ms/step - loss: 0.0631 - sparse_categorical_accuracy: 0.9811 - val_loss: 0.0597 - val_sparse_categorical_accuracy: 0.9852\n",
-      "Epoch 5/100\n",
-      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m726s\u001b[0m 130ms/step - loss: 0.0522 - sparse_categorical_accuracy: 0.9848 - val_loss: 0.0776 - val_sparse_categorical_accuracy: 0.9817\n",
-      "Epoch 6/100\n",
-      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m726s\u001b[0m 130ms/step - loss: 0.0429 - sparse_categorical_accuracy: 0.9879 - val_loss: 0.0739 - val_sparse_categorical_accuracy: 0.9849\n",
-      "Epoch 7/100\n",
-      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m727s\u001b[0m 130ms/step - loss: 0.0426 - sparse_categorical_accuracy: 0.9883 - val_loss: 0.0760 - val_sparse_categorical_accuracy: 0.9859\n",
-      "Epoch 8/100\n",
-      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m727s\u001b[0m 130ms/step - loss: 0.0400 - sparse_categorical_accuracy: 0.9892 - val_loss: 0.0700 - val_sparse_categorical_accuracy: 0.9863\n",
-      "Epoch 9/100\n",
-      "\u001b[1m5577/5577\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m728s\u001b[0m 130ms/step - loss: 0.0384 - sparse_categorical_accuracy: 0.9902 - val_loss: 0.0718 - val_sparse_categorical_accuracy: 0.9851\n",
-      "Epoch 9: early stopping\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.src.callbacks.history.History at 0x295ae86a930>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.fit(train,\n",
     "    epochs = epochs,\n",
@@ -183,12 +180,25 @@
     "            save_best_only = True\n",
     "        )\n",
     "    ]\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from tensorflow.keras import models\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.preprocessing import image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -319,38 +329,13 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from PIL import Image\n",
-    "from tensorflow.keras import models\n",
-    "from tensorflow.keras.models import load_model\n",
-    "from tensorflow.keras.preprocessing import image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'models' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mmodels\u001b[49m\u001b[38;5;241m.\u001b[39mload_model(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./model/softmax.keras\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39msummary()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'models' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "model = models.load_model('./model/softmax.keras')\n",
+    "model = models.load_model('./model/signmon.keras')\n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,9 +349,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 28ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(1)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.predict(load_img(\"d.jpeg\"))"
+    "result = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', 'del', 'nothing', 'space']\n",
+    "np.argmax(model.predict(load_img(\"d.jpeg\")))\n",
+    "np.argmax(model.predict(load_img(\"s.jpg\")))"
    ]
   }
  ],
@@ -386,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
