--- a/Projects/NeuronsStudy/Neuron.ipynb
+++ b/Projects/NeuronsStudy/Neuron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vetor de errors (e) = [0.00000000e+00 4.97171545e-06 0.00000000e+00 0.00000000e+00\n",
+      " 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\juand\\AppData\\Local\\Temp\\ipykernel_31296\\971988289.py:17: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  e[k] = y[k]-yr\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([113,122,107,98,115,120,118])\n",
     "x2 = np.array([6.8,4.7,5.2,3.6,2.9,4.2,5.1])\n",
@@ -28,7 +45,7 @@
     "eta = 0.1\n",
     "bias = 1\n",
     "\n",
-    "for i in range(1000):\n",
+    "for i in range(100):\n",
     "    for k in range(len(x)):\n",
     "        xb = np.hstack((bias,x[:,k]))\n",
     "        yr = np.tanh(np.dot(w,xb))\n",
