--- a/Projects/ASLClassifier/ASLClassifier.ipynb
+++ b/Projects/ASLClassifier/ASLClassifier.ipynb
@@ -6,8 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf\n",
     "from tensorflow.keras import models, layers, activations, \\\n",
-    "    optimizers, utils, losses, initializers, metrics, callbacks"
+    "    optimizers, utils, losses, initializers, metrics, callbacks\n",
+    "print(tf.config.list_physical_devices('GPU'))\n",
+    "tf.config.list_physical_devices()"
    ]
   },
   {
