--- a/Projects/ToolsClassier/main.ipynb
+++ b/Projects/ToolsClassier/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 284ms/step\n",
       "0\n"
      ]
     },
@@ -283,7 +283,7 @@
        "'hammer'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,11 +299,54 @@
     "# print(e)\n",
     "response = ['hammer', 'nothing', 'pliers', 'screwdriver', 'wrench']\n",
     "\n",
-    "res = np.argmax(model.predict(load_img(\"0.jpeg\")))\n",
+    "res = np.argmax(model.predict(load_img(\"foto1.jpg\")))\n",
     "\n",
     "print(res)\n",
     "response[res]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 31ms/step\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2;\n",
+    "\n",
+    "cam_port = 0\n",
+    "cap = cv2.VideoCapture(cam_port)\n",
+    "\n",
+    "status, photo = cap.read()\n",
+    "\n",
+    "cap.release()\n",
+    "\n",
+    "# Display the captured photo in a window titled “My Photo”\n",
+    "cv2.imshow(\"My Photo\", photo)\n",
+    "\n",
+    "photo_resized = cv2.resize(photo, (224, 224))\n",
+    "photo_array = np.expand_dims(photo_resized, axis=0)\n",
+    "\n",
+    "res = np.argmax(model.predict(photo_array))\n",
+    "\n",
+    "response[res]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Wait for 5 seconds before closing the window\n",
+    "cv2.waitKey(5000)\n",
+    "\n",
+    "# Close all OpenCV windows\n",
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
