--- a/Projects/ASLClassifier/ASLClassifier.ipynb
+++ b/Projects/ASLClassifier/ASLClassifier.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +164,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'models' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mmodels\u001b[49m\u001b[38;5;241m.\u001b[39mload_model(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./model/sigmoid.keras\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39msummary()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'models' is not defined"
+     ]
+    }
+   ],
    "source": [
     "model = models.load_model('./model/sigmoid.keras')\n",
     "model.summary()"
@@ -199,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.argmax(model.predict(load_img(\"s.jpeg\")))"
+    "np.argmax(model.predict(load_img(\"foto1.jpg\")))"
    ]
   }
  ],
@@ -219,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
