--- a/Projects/ASLClassifier/ASLClassifier.ipynb
+++ b/Projects/ASLClassifier/ASLClassifier.ipynb
@@ -22,7 +22,7 @@
     "epochs = 100\n",
     "batch_size = 32\n",
     "patience = 5\n",
-    "learning_rate = 0.01\n",
+    "learning_rate = 0.001\n",
     "model_path = './model/sigmoid.keras'"
    ]
   },
@@ -42,31 +42,17 @@
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
-    "    layers.BatchNormalization(),\n",
     "    \n",
-    "    layers.Conv2D(64, (3, 3),\n",
+    "    layers.Conv2D(32, (3, 3),\n",
     "        activation = 'relu',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
-    "    layers.BatchNormalization(),\n",
-    "\n",
-    "    layers.Conv2D(128, (3, 3),\n",
-    "        activation = 'relu',\n",
-    "        kernel_initializer = initializers.RandomNormal()\n",
-    "    ),\n",
-    "    layers.MaxPooling2D((2, 2)),\n",
-    "    layers.BatchNormalization(),\n",
     "    \n",
     "    layers.Flatten(),\n",
     "    \n",
     "    layers.Dropout(0.5),\n",
     "    layers.Dense(128,\n",
-    "        activation = 'tanh',\n",
-    "        kernel_initializer = initializers.RandomNormal()\n",
-    "    ),\n",
-    "    \n",
-    "    layers.Dense(64,\n",
     "        activation = 'tanh',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    ),\n",
@@ -77,7 +63,7 @@
     "    ),\n",
     "    \n",
     "    layers.Dense(29,\n",
-    "        activation = 'softmax',\n",
+    "        activation = 'sigmoid',\n",
     "        kernel_initializer = initializers.RandomNormal()\n",
     "    )\n",
     "])"
@@ -94,7 +80,7 @@
     "        learning_rate = learning_rate\n",
     "    ),\n",
     "    loss = losses.SparseCategoricalCrossentropy(),\n",
-    "    metrics = [ metrics.SparseCategoricalAccuracy(name=\"accuracy\") ]\n",
+    "    metrics = [ metrics.SparseCategoricalAccuracy() ]\n",
     ")"
    ]
   },
@@ -154,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,21 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'models' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mmodels\u001b[49m\u001b[38;5;241m.\u001b[39mload_model(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./model/sigmoid.keras\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39msummary()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'models' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = models.load_model('./model/sigmoid.keras')\n",
     "model.summary()"
